# biometal

./: .gitignore  BACKEND_COMPARISON_FINDINGS.md  CHANGELOG.md  CLAUDE.md  CRATES_IO_PUBLISHING.md  Cargo.toml  DECOMPRESSION_INVESTIGATION_PLAN.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  FAQ.md  FILE_OPERATIONS_STATUS.md  OPTIMIZATION_RULES.md  PYPI_SETUP_CHECKLIST.md  PYTHON.md  PYTHON_TUTORIALS_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_INSTRUCTIONS_v1.2.0.md  RELEASE_NOTES_v1.1.0.md  RULE3_BENCHMARK_RESULTS.md  RULE4_FINDINGS.md  SESSION_SUMMARY_2025-11-06.md  pyproject.toml  test_fai_python.py  test_filtering.py  test_python_bindings.py  test_reference_lookup.py  test_region_query.py  test_statistics.py  test_tbi_python.py
.claude/agents/: rust-code-quality-reviewer.md
.github/workflows/: publish-pypi.yml  test-pypi-publish.yml
archive/planning/: DOCUMENTATION_REVIEW.md  DOCUMENTATION_UPDATE_PLAN.md  NEXT_STEPS.md  PYTHON_TUTORIALS_PHASE2_COMPLETE.md  PYTHON_TUTORIALS_PHASE2_STATUS.md
archive/releases/: PYPI_RELEASE_INSTRUCTIONS.md  PYPI_SETUP_CHECKLIST.md  RELEASE_INSTRUCTIONS_v1.1.0.md
benches/: compression_backends.rs  decompression_backends.rs  kmer_operations.rs  minimizer_optimization.rs  minimizer_simd.rs  operations.rs  parallel_bgzf_validation.rs  rule3_multiscale_validation.rs  rule4_mmap_validation.rs  sequence_operations.rs
docs/: BAM_API.md  BAM_PERFORMANCE.md  CODE_QUALITY_IMPROVEMENTS.md  CROSS_PLATFORM_TESTING.md  FILE_FORMAT_INTEGRATION_ANALYSIS.md  NOODLES_INTEGRATION.md  PHASE4_BENCHMARK_ANALYSIS.md  PYPI_PUBLISHING.md  PYTHON.md  RELEASE_NOTES_v1.0.0.md  SIMD_ROADMAP.md  TEST_PYPI_GUIDE.md  USER_GUIDE.md
docs/archive/: README.md
docs/archive/2025-11/: apple-silicon-research.md  compression-optimization.md  phase2-format-sprint-plan.md  phase2-week1-plan.md
docs/archive/completed/: BENCHMARKS.md  CODE_QUALITY_IMPROVEMENTS.md
docs/archive/planning/: PHASE4_PLAN.md  WRITING_DESIGN.md
docs/archive/process/: TEST_PYPI_GUIDE.md
docs/archive/releases/: RELEASE_NOTES_v1.2.0.md
docs/audits/: CI_CD_SOLO_DEV_ANALYSIS.md  CROSS_PLATFORM_AUDIT.md  MEMORY_SAFETY_AUDIT.md
docs/test-reports/: PYTHON_API_TEST_RESULTS.md  PYTHON_BAI_TEST_RESULTS.md  PYTHON_BINDINGS_VERIFICATION.md
docs/updates/: DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  USER_GUIDE_FORMAT_SECTION_SUMMARY.md  VCF_DOCUMENTATION_FIX_SUMMARY.md
examples/: analyze_bgzip_blocks.rs  bam_advanced_filtering.py  bam_reader_test.rs  basic_usage.py  biometal_demo.ipynb  csi_index_usage.rs  format_primitives_demo.rs  kmer_operations_full.rs  sequence_operations.rs  sra_ecoli.rs  sra_streaming.rs  validate_with_asbb_data.rs
experiments/: .experiments.toml  ALIGNMENT_FORMATS_ROADMAP.md  README.md
experiments/TEMPLATE/: Cargo.toml  FINDINGS.md  PROPOSAL.md  README.md  RESEARCH_LOG.md
experiments/TEMPLATE/benches/: benchmark.rs
experiments/alignment-formats-paper/: BENCHMARKING_PLAN.md  PAPER_OUTLINE.md  README.md
experiments/archive/: README.md
experiments/archive/format-integration/: ECOSYSTEM_ANALYSIS.md  FINDINGS.md  OPTION_D_ANALYSIS.md  PROPOSAL.md  RESEARCH_LOG.md  SUMMARY.md
experiments/archive/simd-minimizers-analysis/: APPLICABILITY_ANALYSIS.md  ENTRY_035_BASELINE_RESULTS.md  ENTRY_036_E_SIMD_VALIDATION.md  GO_DECISION.md  RESEARCH_LOG.md  STATUS_AND_NEXT_STEPS.md  streaming_adaptation_prototype.rs  streaming_prototype
experiments/archive/sra-decoder/: FINDINGS.md  PROPOSAL.md  RESEARCH_LOG.md
experiments/bam-simd-sequence-decoding/: FINDINGS.md  PROPOSAL.md  RESEARCH_LOG.md  benchmark_sequence_decode.rs
experiments/columnar-alignment-format/: CAF_SPECIFICATION.md  PROPOSAL.md  README.md
experiments/native-bam-implementation/: DAY_1_SUMMARY.md  DECISION.md  DECISION_REVISED.md  NEON_OPPORTUNITIES.md  NOODLES_LESSONS.md  PHASE_0_COMPLETE.md  PHASE_0_PROFILING_NEXT_STEPS.md  PHASE_0_RESEARCH.md  PHASE_1_COMPLETE.md  PHASE_1_KICKOFF.md  PROPOSAL.md
experiments/native-bam-implementation/profiling/: Cargo.toml  PROFILING_STATUS.md  README.md  generate_test_bam.sh  get_test_data.sh
experiments/native-bam-implementation/test-data/: synthetic_100000.bam  synthetic_100000.bam.bai
experiments/simd-minimizers-analysis/: PROPOSAL.md  RESEARCH_LOG.md
experiments/sra-decoder/: .gitignore  Cargo.toml  README.md  RESEARCH_LOG.md
notebooks/: 01_getting_started.ipynb  06_bam_production_workflows.ipynb  NOTEBOOKS_PLAN.md  README.md
planning_archive/investigations/: BAI_PERFORMANCE_FINDINGS.md  COMPRESSION_INVESTIGATION_FINDINGS.md  DECOMPRESSION_INVESTIGATION_FINDINGS.md  RULES_3_4_REALITY_CHECK.md  SMITH_WATERMAN_BENCHMARK_RESULTS.md
planning_archive/sessions/: RULE3_AND_RULE4_SESSION_SUMMARY.md  TEST_SESSION_FINDINGS.md
planning_archive/strategic_pivot/: CURRENT_STATUS_AND_RECOMMENDATIONS.md  NEXT_STEPS_ANALYSIS.md  NEXT_STEPS_REASSESSMENT.md  PHASE1_PROGRESS_REPORT.md  PHASE2_TRANSITION.md
planning_archive/temp/: NEXT_SESSION.md
results/cross_platform/: FINDINGS.md
scripts/aws/: README.md  download_results.sh  full_automation.sh  launch_graviton.sh  launch_x86.sh  run_tests.sh  setup_instance.sh  terminate_instance.sh
src/: error.rs  lib.rs  types.rs
src/formats/: blast.rs  gtf.rs  gtf_writer.rs  mod.rs  vcf_writer.rs
src/io/: compression.rs  fasta.rs  fastq.rs  mod.rs  network.rs  paired.rs  sink.rs  sra.rs
src/operations/: complexity.rs  gc_content.rs  kmer.rs  masking.rs  mod.rs  nthash.rs  record_ops.rs  sequence.rs  trimming.rs
src/python/: bam.rs  bed.rs  cram.rs  fasta.rs  gfa.rs  gff.rs  kmers.rs  mod.rs  operations.rs  records.rs  streams.rs  tbi.rs  vcf.rs
tests/: bai_index_tests.rs  bam_writer_integration.rs  bcf_integration_test.rs  cram_real_file_test.rs  csi_real_data_test.rs  fai_tests.rs  fasta_real_world_test.rs  fastq_real_world_test.rs  gtf_real_world_test.rs  gtf_writer_test.rs  paf_real_world_test.rs  seekable_bgzf_debug.rs  tbi_tests.rs  vcf_writer_test.rs  writing_integration.rs
tests/data/: README.md
tests/python/: test_bam.py
(+38 files in other folders)
