[package]
name = "biometal"
version = "1.6.0"
edition = "2021"
authors = ["Scott Handley <handley.scott@gmail.com>"]
description = "ARM-native bioinformatics library with streaming architecture and evidence-based optimization"
documentation = "https://docs.rs/biometal"
repository = "https://github.com/shandley/biometal"
homepage = "https://github.com/shandley/biometal"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "genomics", "arm", "neon", "streaming"]
categories = ["science", "parsing"]
readme = "README.md"
exclude = [
    # Large test data files (>10 MB total)
    "tests/data/large/",
    "tests/data/synthetic_100k.bam",
    "tests/data/synthetic_100k.bam.bai",

    # Experiments and research (not needed for package)
    "experiments/",

    # Planning and session documents
    "BAI_PERFORMANCE_FINDINGS.md",
    "CURRENT_STATUS_AND_RECOMMENDATIONS.md",
    "NEXT_SESSION.md",
    "NEXT_STEPS_ANALYSIS.md",
    "PHASE1_PROGRESS_REPORT.md",
    "PYTHON_BAI_TEST_RESULTS.md",
    "SESSION_SUMMARY_*.md",
    "TEST_SESSION_FINDINGS.md",
    "WEEK3_SUMMARY.md",

    # Benchmark results (not source)
    "benchmarks/comparison/results_*/",

    # Notebooks (Python package only)
    "notebooks/",

    # Blog content
    "blog/",

    # Python cache
    "tests/python/__pycache__/",

    # Virtual environments
    "venv/",
    ".venv/",
    "tests/python/.venv-test/",
]

[dependencies]
# Core I/O and compression
flate2 = "1.0"          # Gzip/bgzip decompression
memmap2 = "0.9"         # Memory-mapped I/O (Rule 4)
crc32fast = "1.4"       # Fast CRC32 for BGZF format

# Error handling
thiserror = "1.0"       # Derive Error trait

# Parallel processing
rayon = "1.8"           # Parallel bgzip (Rule 3)

# Network streaming (Week 3-4) - Rule 6
reqwest = { version = "0.11", features = ["stream", "blocking"], optional = true }
lru = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
bytes = { version = "1", optional = true }

# Python bindings (Week 5-6)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

# SIMD minimizers (Phase 3+4 optimization)
simd-minimizers = { version = "2.2", optional = true }
packed-seq = { version = "4.2", optional = true }

# File format support: Use noodles directly (see docs/NOODLES_INTEGRATION.md)
# No wrapper - direct noodles usage recommended for zero overhead

[dev-dependencies]
criterion = "0.5"       # Benchmarking
proptest = "1.4"        # Property-based testing
wiremock = "0.6"        # HTTP mock server for integration tests
tempfile = "3.8"        # Temporary files for testing

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM NEON is in std::arch, no external dependency needed

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"            # For madvise on macOS (Rule 4)

[lib]
name = "biometal"
crate-type = ["rlib", "cdylib"]

[features]
default = ["network"]  # Enable network streaming by default (Rule 6)
network = ["dep:reqwest", "dep:lru", "dep:tokio", "dep:bytes"]
python = ["dep:pyo3"]
simd = ["dep:simd-minimizers", "dep:packed-seq"]  # SIMD-accelerated minimizers (3-15× speedup)
# Removed: formats feature (use noodles directly instead)

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "sequence_operations"
harness = false

[[bench]]
name = "network_streaming"
harness = false
required-features = ["network"]

[[bench]]
name = "minimizer_baseline"
harness = false

[[bench]]
name = "minimizer_fast"
harness = false

[[bench]]
name = "minimizer_optimization"
harness = false

[[bench]]
name = "minimizer_simd"
harness = false
required-features = ["simd"]

[[bench]]
name = "bam_parsing"
harness = false

[[bench]]
name = "sequence_decode"
harness = false

[[bench]]
name = "bai_index_performance"
harness = false

[[bench]]
name = "rule2_block_processing"
harness = false

[[bench]]
name = "parallel_bgzf_validation"
harness = false

[[bench]]
name = "rule3_multiscale_validation"
harness = false

[[bench]]
name = "rule4_mmap_validation"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
