[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "biometal-rs"
version = "1.0.0"
description = "ARM-native bioinformatics library with streaming architecture and evidence-based optimization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Scott Handley", email = "scott.handley@example.com" }
]
keywords = ["bioinformatics", "genomics", "arm", "neon", "streaming"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/shandley/biometal"
Documentation = "https://docs.rs/biometal"
Repository = "https://github.com/shandley/biometal"

[tool.maturin]
features = ["python"]
module-name = "biometal"
